--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debathena-quota-config (1.1) unstable; urgency=low
+
+  * Convert to the new config-package-dev interface
+
+ -- Shreevatsa R <vatsa@mit.edu>  Sun,  6 Apr 2008 18:58:43 -0400
+
 debathena-quota-config (1.0debathena3) unstable; urgency=low
 
   * Rebuild against debathena-config-build-common 3.4.
