--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debathena-quota-config (1.2) unstable; urgency=low
+
+  * Convert to use config-package.mk interface, new in config-package-
+    dev 4.5
+
+ -- Tim Abbott <tabbott@mit.edu>  Mon, 21 Apr 2008 19:02:50 -0400
+
 debathena-quota-config (1.1) unstable; urgency=low
 
   * Convert to the new config-package-dev interface
