--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debathena-quota-config (1.3) unstable; urgency=low
+
+  * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.
+  * Change "Debian-Athena Project" to "Debathena Project".
+  * Remove debian/control from version control.
+  * Clean up debian/copyright.
+
+ -- Tim Abbott <tabbott@mit.edu>  Sat, 24 Jan 2009 16:26:14 -0500
+
 debathena-quota-config (1.2) unstable; urgency=low
 
   * Convert to use config-package.mk interface, new in config-package-
